examples/BAD/BAD_047_CONSISTENCY_2/main.nut
Data Address :=
    - string: type
    - string: name
    - uint: number

Data House :=
    - Address: address
    - String: family_name

{}
